--- a/public/css/slideshow.css
+++ b/public/css/slideshow.css
@@ -37,7 +37,7 @@
     width: 20px;
     height: 20px;
 }
-/* .navigation-button:hover{
+.navigation-button:hover{
     transition: 0.4s ease-in;
     background-color: rgba(255,255,255,100);
-} */
+}
