--- a/resources/views/addnews.edge
+++ b/resources/views/addnews.edge
@@ -8,31 +8,29 @@
         {{csrfField()}}
         
         <div class="form-group">
-            <label for="news_Cg">หมวดหมู่</label>
+            <label for="news_Cg">Category</label>
             <input type="text" class="form-control" name="news_Cg" required>
         </div>
 
         <div class="form-group">
-            <label for="news_Topic">ชื่อข่าว</label>
+            <label for="news_Topic">Topic</label>
             <input type="text" class="form-control" name="news_Topic" required>
         </div>
 
         <div class="form-group">
-            <label for="news_Content">เนื้อหา</label>
-            <span>
-                <textarea rows="2" cols="45" title="ข้อความ" name="news_Content" class="">
-                </textarea>
-            </span>
+            <label for="news_Content">Content</label>
+            <input type="text" class="form-control" name="news_Content" required>
         </div>
 
         <div class="form-group">
-            <label for="news_Date">วันที่</label>
+            <label for="news_Date">Date</label>
             <input type="text" class="form-control" name="news_Date" required>
         </div>
 
         <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" name="username" required>
+            <button class="addnews-submit">
+                ADD
+            </button>
         </div>
 
     </div>
