--- a/public/css/home.css
+++ b/public/css/home.css
@@ -76,34 +76,47 @@
     color: #636363;
     margin: 12px 0 0 8px;
 }
-
-.slideshow-container {
-    width: 100%;
-    height: 100vh;
+.slideshow-outest-container {
+    position: relative;
+    margin-left: 25vw;
+    width: 50%;
+    height: 100%;
     overflow: hidden;
+}
+.slideshow-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+.slideshow-pictures{
+    display: flex;
+    flex-direction: row;
 }
 .slideshow-pictures img{
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 .slideshow-button {
     position: absolute;
-    visibility: hidden;
+    visibility: hidden; 
 }
 .navigation {
-    z-index: 1000;
     position: absolute;
-    left: 12.5%;
-    top: 5%;
+    width: 100%;
+    z-index: 1000;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    top: 85%;
+    left: 32.25%;
 }
 .navigation-button {
     transition: 0.4s ease-in-out;
     background-color: rgba(255,255,255,0);
     border: 1px solid white;
     border-radius: 50%;
-    margin: 150%;
     width: 20px;
     height: 20px;
+    margin-left: 5%;
 }
