--- a/public/css/home.css
+++ b/public/css/home.css
@@ -18,7 +18,7 @@
 }
 
 .type-articles-block {
-    margin: 100px 0 0 0;
+    margin: 80px 0 0 0;
 }
 
 .articles-label-block {
@@ -40,16 +40,18 @@
 }
 
 .news-component {
-    width: 100%;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
+    width: 70%;
+    margin: 0 15%;
 }
 
 .news-content-show {
-    padding: 3%;
+    background-color: #f8f8f8;
     width: 255px;
-    height: 255px;
+    margin: 5px auto;
+    padding: 20px 20px;
+    max-height: auto;
     transition:  0.4s;
     border-radius: 10px;
 }
@@ -71,9 +73,28 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.news-content {
+    margin: 0 0 0 8px;
+    color: #1a1a1a;
+    line-height: 2rem;
+    white-space:nowrap;
+    width: auto; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
+
 .news-content-date {
     font-size: 0.8rem;
     color: #636363;
     margin: 12px 0 0 8px;
+}
+
+.tag-block {
+    width: 100%;
+    height: 120px;
+    margin-top: 80px;
+    background-color: #2a81b8;
+    color: #fff;
 }
 
