--- a/resources/views/news_1.edge
+++ b/resources/views/news_1.edge
@@ -6,7 +6,7 @@
     <div class="news-container">
         <div class="news-header">
             <h1>
-                <p>หนุ่มฟลอริดา ซื้อรถ Porsche มูลค่ากว่า 4.3 ล้านบาท ด้วย “เช็คปลอม” ที่ปรินท์มาจากบ้าน</p>
+                <p>“ปั๊มน้ำมันระเบิด” ในรัสเซีย เปลวไฟพุ่งขึ้นไปเป็นดอกเห็ด ทำผู้คนขวัญผวา</p>
             </h1>
             <div class="news-header-underline"></div>
         </div>
