--- a/public/css/news.css
+++ b/public/css/news.css
@@ -6,10 +6,11 @@
 }
 .news-header h1{
     font-size: 3rem;
+    color: #2a81b8;
 }
 .news-header-underline {
     margin-top: 2%;
-    border-bottom: 5px solid black;
+    border-bottom: 5px solid #2a81b8;
     margin-bottom: 2%;
 }
 .news-body {
@@ -18,6 +19,7 @@
 }
 .news-body h1{
     font-size: 2.5rem;
+    color: #2a81b8;
 }
 .news-body h2{
     font-size: 1.5rem;
