--- a/public/css/news.css
+++ b/public/css/news.css
@@ -28,3 +28,63 @@
     margin-top: 5%;
     margin-bottom: 5%;
 }
+.comment-container {
+    margin-left: 5%;
+}
+.comment-container h1{
+    font-size: 4rem;
+    color: #2a81b8;
+}
+.comment-container h2{
+    font-size: 2rem;
+    margin-bottom: 1%;
+}
+.inside-comment-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2%;
+    margin-left: 10%;
+    width: 100%;
+    height: 100%;
+}
+.inside-comment-container input[type="text"] {
+    margin-left: 5%;
+    height: 50px;
+    width: 100%;
+    border: none;
+    outline: none;
+}
+.comment-submit-button {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 15%;
+}
+.inside-comment-container button {
+    color: #2a81b8;
+    font-size: 1.5rem;
+    width: 15%;
+    height: 25%;
+    border: 2px solid #2a81b8;
+    background-color: transparent;
+    outline: none;
+}
+.comment-underline {
+    margin-top: 2%;
+    margin-bottom: 2%;
+    border-bottom: 5px solid black;
+}
+.another-comment {
+    width: 100%;
+    height: 100%;
+}
+.comment-box {
+    margin: 5%;
+}
+.comment-box h1 {
+    font-size: 2rem;
+}
+.comment-box h2 {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 1.25rem;
+}
