--- a/public/css/news.css
+++ b/public/css/news.css
@@ -28,6 +28,10 @@
     margin-top: 5%;
     margin-bottom: 5%;
 }
+.news-body img{
+    width: 100%;
+    height: 100%;
+}
 .comment-container {
     margin-left: 5%;
 }
